--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 /* Use the comments below to complete activities 1 through 6. */
 
 /* 1. Use the space below to change the background color of the page using the body tag */
-
+body{
+background-color:#DC143C;
+}
 
 
 
@@ -11,7 +13,7 @@
 #image1 {
     width: 200px;
     height: 200px;
-    border:solid, black, 10px;
+    border:solid, black, 5px;
 }
 
 /* 3. Size image2 to make it twice as large as image1 */
@@ -25,15 +27,18 @@
 	border-radius: 4px;
 	border: thin solid #F0E020;
 	padding: 5px;
-	background-color: #F8F094;
+	background-color:#00BFFF;
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	font-weight: bold;
-	color: #663300;
+	color: #FFF;
 	width: 75px;
 }
 
 /* 5. Use the space below to make all h2 tags your favorite color. */
-
+h2{
+	color: 	#FFF;
+	
+}
 
 
 
